<resources>
    <string name="startscreen"></string>
    <string name="app_name">图灵金融</string>
    <string name="action_settings">Settings</string>
    <string name="search_input">请输入股票代码/名称/简写</string>
    <string name="hello_world">Hello world!</string>
    <string name="morenfenzu">我的组合</string>
    <string name="fragment_main">首页</string>
    <string name="fragement_zixuan">行情</string>
    <string name="fragement_zhiyan">智研</string>
    <string name="fragement_zixun">资讯</string>
    <string name="fragement_licai">理财</string>
    <string name="fragement_yousuan">优算</string>
    <string name="fragment_shouye">首页</string>
    <string name="fragment_tulingzhiku">数据</string>
    <string name="fragment_hangqing">行情</string>
    <string name="fragment_huanqiushishi">新闻</string>
    <string name="fragment_licaijiaoyi">理财</string>
    <string name="news_channel">频道管理</string>
    <string name="have_add">已添加</string>
    <string name="have_add_introduce">点击删除，长按拖动排序</string>
    <string name="can_add">可添加</string>
    <string name="can_add_introduce">快速点击完成添加</string>
    <string name="xelc">零钱理财（1元起投）</string>
    <string name="zsltitle">图灵·指数乐</string>
    <string name="xelctitle">大众·保本理财</string>
    <string name="xelcdesc">银行票据、货币基金、\n集合理财等低风险产品</string>
    <string name="delc">大额理财（100万起投）</string>
    <string name="delctitle">高端·私人理财</string>
    <string name="delctitlehai">海外·投资理财</string>
    <string name="delcdesc">精选阳光私募产品,夺取超额收益\n市场中性、量化交易、管理期货、套利</string>
    <string name="dmjz">期指交易</string>
    <string name="rank">牛人榜 股票组合</string>
    <string name="dmjztitle">期指交易（模拟）</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="dmjzdesc">真实数据行情 练习盘感\n提高交易技能 千万孵化基金等你操盘</string>
    <string name="gqzc">外汇交易</string>
    <string name="gqzctitle">外汇交易（模拟）</string>
    <string name="gqzcdesc">真实外汇行情 \n10-200倍杠杆/锤炼交易技术</string>
    <string name="gqtz">股票投资</string>
    <string name="gqtztitle">股票投资</string>
    <string name="gqtzdesc">发现牛人 发现牛股\n周周比赛 大奖天天发</string>
    <string name="qqhg">全球直播</string>
    <string name="jzjl">记账记录</string>
    <string name="hbjj">保本理财</string>
    <string name="yeargain">年化收益</string>
    <string name="fxts">风险提示</string>
    <string name="xqjs">详情介绍</string>
    <string name="czzn">操作指南</string>
    <string name="scpg">市场评估</string>
    <string name="rgxz">认购须知</string>
    <string name="jzzs">净值走势</string>
    <string name="xxxx">详细信息</string>
    <string name="fyfl">返佣费率</string>
    <string name="futurestitle">期货列表</string>
    <string name="yt">亚太</string>
    <string name="woyaoruzhu">社区智库</string>
    <string name="woyaotouzi">我要参与 +</string>
    <string name="pjsyl">平均市盈率</string>
    <string name="news_search">搜索</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="back">返回</string>
    <string name="title_name">国农科技</string>
    <string name="trading">交易</string>
    <string name="tv_times">时间段</string>
    <string name="rb_2h">2小时</string>
    <string name="rb_1d">1天</string>
    <string name="rb_2d">2天</string>
    <string name="rb_1w">1周</string>
    <string name="rb_1M">1月</string>
    <string name="rb_3M">3月</string>
    <string name="rb_6M">6月</string>
    <string name="rb_1y">1年</string>
    <string name="rb_2y">2年</string>
    <string name="bt_xian">线状图</string>
    <string name="bt_K">K线图</string>
    <string name="bt_buy">快买</string>
    <string name="bt_sall">快卖</string>
    <string name="bt_warning">预警</string>
    <string name="bt_order">条件单</string>
    <string name="bt_set">设置</string>
    <string name="tv_number">--</string>
    <string name="tv_zuoshou">昨</string>
    <string name="tv_total">量</string>
    <string name="tv_chi">持</string>
    <string name="tv_gao">高</string>
    <string name="tv_di">低</string>
    <string name="tv_kai">开</string>
    <string name="tv_xiadan">买入</string>
    <string name="tv_tixin">卖出</string>
    <string name="tv_warn">提醒</string>
    <string name="tv_warn_add">添加提醒</string>
    <string name="tv_warn_sure">确定</string>
    <string name="tv_warn_setwarn">提醒设置</string>
    <string name="tv_warn_historywarn">历史提醒</string>
    <string name="dialog_title">盘口信息</string>
    <string name="dialog_open">今日开盘</string>
    <string name="dialog_max">最高指数</string>
    <string name="dialog_min">最低指数</string>
    <string name="close">关闭</string>
    <string name="MyMoney_title_name">我的投资</string>
    <string name="numebr">--</string>
    <string name="wu">无</string>
    <string name="yester_profit">昨日收益（元）</string>
    <string name="total_profit">累计收益（元）</string>
    <string name="investment_incord">投资记录（元）</string>
    <string name="payment_incord">回款记录（元）</string>
    <string name="noback_money">无待回款</string>
    <string name="account_money">账户余额</string>
    <string name="redpaper">提现</string>
    <string name="rechart">充值</string>
    <string name="mybank">我的银行卡</string>
    <string name="thehomepage">首页</string>
    <string name="product_list">产品列表</string>
    <string name="more">更多</string>
    <string name="qianbaobao">钱宝宝</string>
    <string name="zaitou">在投资金(元)</string>
    <string name="keyong">可用余额(元)</string>
    <string name="yileiji">回款收益（元）</string>
    <string name="dingqilicai">定期理财项目</string>
    <string name="ftime">投入时间</string>
    <string name="btime">回款时间</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">刷新中&#8230;</string>
    <string name="header_hint_refresh_time">上次刷新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开加载更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="space">&#160;</string>
    <string name="adata">A股数据</string>
    <string name="bdata">B股数据</string>
    <string name="ahdata">A/H数据</string>
    <string name="id">序号</string>
    <string name="name">名称</string>
    <string name="price">现价</string>
    <string name="a_price">A股价格</string>
    <string name="agzdf">A股涨跌幅</string>
    <string name="hgzdf">H股涨跌幅</string>
    <string name="ha_ratio">比价</string>
    <string name="hgjhgy">H股价格(港元)</string>
    <string name="hgjgy">H股价格(元)</string>
    <string name="coupon_next">下期利率</string>
    <string name="base_est_dis_rt">整体溢价率</string>
    <string name="amount_increase_rt">份额增长</string>
    <string name="xqlr">下期利润</string>
    <string name="code">代码</string>
    <string name="a_code">A股代码</string>
    <string name="h_code">H股代码</string>
    <string name="gz">估值</string>
    <string name="yjl">溢价率</string>
    <string name="jggg">价格杠杆</string>
    <string name="fragment_current">活期</string>
    <string name="fragment_regular">定期</string>
    <string name="fragment_my">我的投资</string>
    <string name="fragment_my_msg1">我们只提供保本型产品\n中国平安保险全程担保</string>
    <string name="fragment_main_enter">进入</string>
    <string name="fragment_main_entercode">请输入VIP码</string>
    <string name="fragment_main_what">什么是贵宾通道</string>
    <string name="fragment_main_safe1">快捷支付</string>
    <string name="fragment_main_safe2">易宝支付，中国最大的大额支付平台，年交易额5000亿</string>
    <string name="fragment_main_safe3">资金托管</string>
    <string name="fragment_main_safe4">招商证卷为您的资金提供全程托管服务</string>
    <string name="fragment_main_safe5">保险公司承保</string>
    <string name="fragment_main_safe6">阳光保险为您的资金安全进行承保</string>
    <string name="fragment_main_vip">输入VIP码</string>
    <string name="fragment_main_vipmsg">年投资100万以上会员专属/商会贵宾/理财活动通道</string>
    <string name="fragment_main_vip_highgain">·更高收益</string>
    <string name="fragment_main_vip_highservice">·高端定制</string>
    <string name="fragment_main_vip_private">私人尊享理财产品</string>
    <string name="fragment_main_vip_guaranteed">平安保险全程保本</string>
    <string name="fragment_main_current_highgain">·实时到账</string>
    <string name="fragment_main_current_highservice">·随存随取</string>
    <string name="fragment_main_current_private">年化收益率</string>
    <string name="fragment_main_current_guaranteed">平安保险全程保本</string>
    <string name="fragment_main_regular_threemonth">定期3个月</string>
    <string name="fragment_main_regular_sixmonth">定期6个月</string>
    <string name="fragment_main_regular_oneyear">定期12个月</string>
    <string name="fragment_current_more">查看更多</string>
    <string name="fragment_current_moregain">历史万份收益</string>
    <string name="fragment_current_seven">7日</string>
    <string name="fragment_current_month">1个月</string>
    <string name="fragment_current_twomonth">2个月</string>
    <string name="turnin">转入</string>
    <string name="activity_vip_title">VIP·贵宾专享</string>
    <string name="activity_vip_msg">会员专享</string>
    <string name="activity_turnout_out">超出限额</string>
    <string name="activity_turnout_string1">金额</string>
    <string name="activity_turnout_string2">实时到账</string>
    <string name="activity_turnout_string3">全部转出</string>
    <string name="activity_turnout_string4">今天总共可转出5次,</string>
    <string name="activity_turnout_string5">详细介绍</string>
    <string name="activity_turnout_string6">本次最多可转出0.00元</string>
    <string name="activity_turnout_string7">实时转出</string>
    <string name="activity_turnin_string1">该卡本次最多可转出50,000.00元</string>
    <string name="activity_turnin_string2">今天总共可转入5次,</string>
    <string name="activity_turnin_string3">预计收益到账时间</string>
    <string name="activity_turnin_string4">立即转入</string>
    <string name="activity_turnin_complete">完成</string>
    <string name="activity_turnin_protocol">《服务协议及风险通知》</string>
    <string name="activity_turn_from">从</string>
    <string name="activity_turn_to">到</string>
    <string name="activity_mybank">我的银行卡</string>
    <string name="activity_mybank_removebank">解除绑定</string>
    <string name="activity_mybank_cancel">取消</string>
    <string name="activity_news_feature">专题</string>
    <string name="turnout">转出</string>
    <string name="buyfirst1">·50,000起购</string>
    <string name="buyfirst2">·100,000起购</string>
    <string name="regular1">·定期3个月</string>
    <string name="regular2">·定期6个月</string>
    <string name="regular3">·定期12个月</string>
    <string name="fragment_regular_guaranteed">·本金保障</string>
    <string name="fragment_regular_floatgain">·浮动收益</string>
    <string name="redemption">申购赎回</string>
    <string name="buyfirst">起购金额</string>
    <string name="buycost">申购费率</string>
    <string name="buyendtime">申购截止</string>
    <string name="buycomfirm">申购确认</string>
    <string name="buyowntime">投资期限</string>
    <string name="addcard">填写资料</string>
    <string name="account">开户</string>
    <string name="account_step1">填写基本资料</string>
    <string name="buy_cash">购入金额:</string>
    <string name="buy_thing">盈亏情况:</string>
    <string name="monthly_income">当月收益:</string>
    <string name="update_time">更新时间:</string>
    <string name="maximum_retracement">最大回撤:</string>
    <string name="saturation">饱和度:</string>
</resources>