<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bj"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/bj" />

        <LinearLayout
            android:id="@+id/yousuanitem_bg"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/img_shangzhang"
            android:orientation="horizontal" >

            <!--<ImageView-->
                <!--android:id="@+id/yousuan_item_zoushi"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="90dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:scaleType="fitXY"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"
                />-->

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/yousuan_item_zoushi"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY"
                android:layout_weight="1">
            </com.github.mikephil.charting.charts.LineChart>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1.5"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp" >

                    <TextView
                        android:id="@+id/yousuan_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="黄金矿工"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/yousuan_item_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:text="+4.06%"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_200fengexian" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="17.5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/monthly_income"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/yousuan_item_yuepercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:text="+4.06%"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="17.5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/update_time"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/yousuan_item_updatetime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:text="2小时前"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="17.5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/maximum_retracement"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/yousuan_item_huice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:text="-4883.83"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="17.5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/saturation"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/yousuan_item_baohe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:text="正常"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/yousuan_item_shape" >

            <TextView
                android:id="@+id/yousuan_cash_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/buy_cash"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/yousuan_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/yousuan_cash_tip"
                android:text="10,000"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/yousuan_thing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="+1,034.58"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/yousuan_thing"
                android:text="@string/buy_thing"
                android:textColor="@color/black" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/bj" />
    </LinearLayout>

    <ImageView
        android:id="@+id/yousuan_my_testimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:src="@drawable/img_shiyongshuiyin"/>

</RelativeLayout>